# muddled

./: .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  Rakefile  build.gradle  config.h.in  configure  configure.ac  doxygen.cfg  index.html  install  muddyplains.db3  params.json  premake4.lua  startup  startup.sh
docs/: index.html
docs/account_h/: index.html  toc.html
docs/affect_h/: index.html  toc.html
docs/area_h/: index.html  toc.html
docs/db_h/: index.html  toc.html
docs/engine_h/: index.html  toc.html
docs/flag_h/: index.html  toc.html
docs/hashmap_h/: index.html  toc.html
docs/variant_h/: index.html  toc.html
html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  (+41 more)
html/search/: all_61.js  all_62.js  all_64.js  all_65.js  all_67.js  all_6c.js  all_6e.js  all_70.js  all_74.js  all_77.js  classes_63.js  classes_66.js  classes_68.js  classes_6f.js  classes_72.js  classes_73.js  classes_76.js  search.js
m4/: ax_lua.m4
resources/: CMakeLists.txt  Makefile.am  Makefile.in  muddled.db
scripts/: CMakeLists.txt  Dockerfile  docker-compose.yml  muddled-web.sh  muddled.service  muddled.sh  muddyplains.sh  start_image  startup
src/: CMakeLists.txt  Makefile.am  Makefile.in  account.c  account.h  affect.c  affect.h  area.c  area.h  buffer.c  buffer.h  cdecl.h  channel.c  channel.h  character.c  character.h  class.c  class.h  client.h  color.c  color.h  command_admin.c  command_info.c  config.h  connection.h  db.c  db.h  engine.c  engine.h  exit.c  exit.h  explored.c  explored.h  fight.c  fight.h  flag.c  flag.h  forum.c  forum.h  grid.c  (+55 more)
src/export/muddled/: account.h  affect.h  area.h  buffer.h  channel.h  character.h  db.h  engine.h  exit.h  explored.h  flag.h  forum.h  gsn.h  log.h  macro.h  object.h  script.h  skill.h  util.h  variant.h
src/libmuddled/: account.c  area.c  channel.c  character.c  class.c  color.c  db.c  engine.c  explored.c  grid.c  hashmap.c  help.c  hint.c  log.c  map.c  nonplayer.c  player.c  room.c  script.c  string.c  util.c  variant.c
src/muddled/: account.h  affect.h  area.h  channel.h  character.h  class.h  client.c  color.h  command.c  command_settings.c  connection.h  db.h  engine.h  exit.h  explored.h  fight.h  flag.h  forum.h  grid.h  hashmap.h  help.h  hint.h  importer.c  log.h  main.c  nonplayer.h  object.h  olc.h  olc_area.c  olc_engine.c  olc_exit.c  olc_npc.c  olc_social.c  player.h  race.h  room.h  server.c  skill.h  social.h  spellfun.h  (+4 more)
src/muddyengine/: CMakeLists.txt  Makefile.am  account.c  account.h  affect.c  affect.h  area.c  area.h  buffer.c  buffer.h  channel.c  channel.h  character.c  character.h  class.c  class.h  color.c  color.h  connection.h  db.c  db.h  engine.c  engine.h  exit.c  exit.h  explored.c  explored.h  fight.c  fight.h  flag.c  flag.h  forum.c  forum.h  grid.c  grid.h  gsn.h  hashmap.c  hashmap.h  help.c  help.h  (+32 more)
src/muddyplains/: client.c  client.h  color.c  command.c  command.h  command_admin.c  command_communication.c  command_info.c  command_settings.c  importer.c  importer.h  main.c  olc.c  olc.h  olc_area.c  olc_engine.c  olc_exit.c  olc_help.c  olc_npc.c  olc_object.c  olc_player.c  olc_room.c  olc_skill.c  olc_social.c  server.c  server.h  telnet.c  telnet.h  update.c  update.h  websocket.c  websocket.h
src/server/: CMakeLists.txt  Makefile.am  Makefile.in  client.c  client.h  command.c  command.h  command_admin.c  command_communication.c  command_info.c  command_settings.c  importer.c  importer.h  main.c  olc.c  olc.h  olc_area.c  olc_engine.c  olc_exit.c  olc_help.c  olc_npc.c  olc_object.c  olc_player.c  olc_room.c  olc_skill.c  olc_social.c  server.c  server.h  telnet.c  telnet.h  update.c  update.h  websocket.c  websocket.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  check_account.c  check_area.c  check_character.c  check_color.c  check_commands.c  check_db.c  check_engine.c  check_explored.c  check_flags.c  check_hashmap.c  check_object.c  check_string.c  check_update.c
tests/libmuddled/: check_account.c  check_engine.h  check_hashmap.c  check_string.c
tests/muddyengine/: check_area.c  check_character.c  check_color.c  check_db.c  check_engine.c  check_engine.h  check_explored.c  check_flags.c  check_hashmap.c  check_object.c  check_string.c
tests/muddyplains/: check_commands.c  check_server.c  check_server.h  check_update.c
web/: CMakeLists.txt  muddled
web/public/css/: main.css
web/t/: basic.t
web/templates/home/: index.html.ep
web/templates/layouts/: default.html.ep  navbar.html.ep
