
lib_LTLIBRARIES = libmuddled.la

libmuddled_la_LDFLAGS = $(LIBMUDDLED_LA_LDFLAGS) $(LIBS) -version-info 0:0:0

subdirheadersdir = $(pkgincludedir)/muddled

subdirheaders_HEADERS = muddled/account.h muddled/affect.h muddled/area.h muddled/buffer.h muddled/channel.h muddled/character.h muddled/class.h muddled/color.h muddled/connection.h muddled/db.h muddled/engine.h muddled/exit.h muddled/explored.h muddled/fight.h muddled/flag.h muddled/forum.h muddled/grid.h muddled/gsn.h muddled/hashmap.h muddled/help.h muddled/hint.h muddled/log.h muddled/lookup.h muddled/macro.h muddled/map.h muddled/nonplayer.h muddled/object.h muddled/player.h muddled/race.h muddled/room.h muddled/script.h muddled/skill.h muddled/social.h muddled/spellfun.h muddled/string.h muddled/util.h muddled/variant.h

libmuddled_la_SOURCES = account.c affect.c area.c buffer.c channel.c character.c class.c color.c db.c engine.c exit.c explored.c fight.c flag.c forum.c grid.c hashmap.c help.c hint.c log.c lookup.c map.c nonplayer.c object.c player.c race.c room.c script.c skill.c social.c string.c util.c variant.c

libmuddled_la_CFLAGS = $(LIBMUDDLED_LA_CFLAGS) @X_CFLAGS@
