
dist_INCLUDES = account.h area.h character.h color.h db.h exit.h help.h \
	log.h macro.h nonplayer.h object.h player.h reset.h room.h script.h social.h string.h \
	util.h flag.h lookup.h property.h race.h hint.h class.h map.h buffer.h grid.h \
	forum.h affect.h channel.h gsn.h spellfun.h importer.h
	
CLEANFILES = *~

