bin_PROGRAMS = muddled

muddled_SOURCES = client.c command.c command_admin.c command_communication.c command_info.c command_settings.c importer.c main.c olc.c olc_area.c olc_engine.c olc_exit.c olc_help.c olc_npc.c olc_object.c olc_player.c olc_room.c olc_skill.c olc_social.c server.c telnet.c update.c websocket.c

muddled_CFLAGS = $(MUDDLED_CFLAGS) -I../

muddled_LDFLAGS = ../libmuddled.la $(LIBS)
